<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".ui.LoginActivity">

    <LinearLayout
      android:layout_gravity="center_horizontal"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content">

    <TextView
      android:layout_marginTop="24dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/heading_login"
      android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

    <EditText
      android:id="@+id/username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:hint="@string/text_username"
      android:inputType="textEmailAddress"/>

    <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:hint="@string/text_password"
      android:inputType="textPassword"/>

    <Button
      android:id="@+id/login_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/button_log_in"/>

    <ProgressBar
      android:id="@+id/progress"
      style="@style/Widget.AppCompat.ProgressBar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:visibility="gone"
      tools:visibility="visible"/>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:gravity="center_horizontal"
      android:text="@string/terms"
      android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

    </LinearLayout>

</ScrollView>
