<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools">

  <PreferenceCategory android:title="Sync">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
           dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
      android:defaultValue="180"
      android:entries="@array/pref_sync_frequency_titles"
      android:entryValues="@array/pref_sync_frequency_values"
      android:key="syncFrequency"
      android:negativeButtonText="@null"
      android:positiveButtonText="@null"
      android:title="@string/pref_title_sync_frequency"
      tools:summary="3 hours"/>

    <SwitchPreference
      android:defaultValue="true"
      android:key="syncUnmeteredOnly"
      android:title="@string/pref_title_wifi_only">
    </SwitchPreference>

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
           design guidelines. -->
    <Preference android:title="@string/pref_title_system_sync_settings">
      <intent android:action="android.settings.SYNC_SETTINGS"/>
    </Preference>

  </PreferenceCategory>

  <PreferenceCategory android:title="Account">
    <Preference android:title="Sign out">
      <intent
        android:action="com.github.genderquery.usmbalance.action.LOGOUT"
        android:targetClass="com.github.genderquery.usmbalance.ui.LoginActivity"
        android:targetPackage="com.github.genderquery.usmbalance"/>
    </Preference>
  </PreferenceCategory>

</PreferenceScreen>
